Ju Hun Lee> Class CgUI CheckStyle fix: Method invokes inefficient Number constructor, Method names should start with a lower case letter, Method allocates a boxed primitive just to call toString